--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -37,17 +37,17 @@ jobs:
             --slurpfile sarif sarif.b64 \
             '{ commit_sha: $commit_sha, ref: $ref, sarif: $sarif }' > payload.json
 
-          HTTP_STATUS=$(curl -s -o response.json -w "%{http_code}" \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: token ${{ secrets.TOKEN }}" \
-            -H "Content-Type: application/json" \
-            --data-binary @payload.json \
-            "https://api.github.com/repos/${{ github.repository }}/code-scanning/sarifs")
+          # HTTP_STATUS=$(curl -s -o response.json -w "%{http_code}" \
+          #   -H "Accept: application/vnd.github+json" \
+          #   -H "Authorization: token ${{ secrets.TOKEN }}" \
+          #   -H "Content-Type: application/json" \
+          #   --data-binary @payload.json \
+          #   "https://api.github.com/repos/${{ github.repository }}/code-scanning/sarifs")
 
           
-          echo "HTTP status: $HTTP_STATUS"
-          echo "API response:"
-          cat response.json | jq .
+          # echo "HTTP status: $HTTP_STATUS"
+          # echo "API response:"
+          # cat response.json | jq .
 
   preview:
     # Run only if PR is open and not draft
