--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -33,8 +33,8 @@ jobs:
           env
 
 
-          # jq -n \
-          #   '{ commit_sha: $GITHUB_SHA, ref: $GITHUB_REF", sarif: $SARIF_BASE64 }' > payload.json
+          jq -n \
+            '{ commit_sha: $GITHUB_SHA, ref: $GITHUB_REF", sarif: $SARIF_BASE64 }' > payload.json
 
           # HTTP_STATUS=$(curl -s -o response.json -w "%{http_code}" \
           #   -H "Accept: application/vnd.github+json" \
