--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -34,7 +34,7 @@ jobs:
 
 
           jq -n \
-            '{ commit_sha: $GITHUB_SHA, ref: $GITHUB_REF", sarif: $SARIF_BASE64 }' > payload.json
+            '{ commit_sha: $GITHUB_SHA, ref: $GITHUB_REF, sarif: $SARIF_BASE64 }' > payload.json
 
           # HTTP_STATUS=$(curl -s -o response.json -w "%{http_code}" \
           #   -H "Accept: application/vnd.github+json" \
