--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -6,38 +6,22 @@ on:
 
 jobs:
   clean:
-    runs-on: ubuntu-latest
+    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@9ebb0c8894f693c412243968f73cb1ae3910cecf
     concurrency:
       group: ci-preview-${{ github.event.pull_request.head.ref }}
       cancel-in-progress: true
-
-    steps:
-      - name: Checkout app
-        uses: actions/checkout@v3
-        with:
-          path: app
-
-      - name: Checkout github-ci
-        uses: actions/checkout@v3
-        with:
-          repository: jalantechnologies/github-ci
-          path: platform
-          ref: clean   # 👈 this ensures you're using your latest branch from github-ci
-
-      - name: Run reusable clean workflow locally
-        uses: ./platform/.github/workflows/clean.yml
-        with:
-          hosting_provider: ${{ vars.HOSTING_PROVIDER1 }}
-          app_name: flask-react-app
-          app_env: preview
-          branch: ${{ github.event.pull_request.head.ref }}
-          docker_registry: ${{ vars.DOCKER_REGISTRY }}
-          docker_username: ${{ vars.DOCKER_USERNAME }}
-          aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
-          aws_region: ${{ vars.AWS_REGION }}
-          do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
-        secrets:
-          docker_password: ${{ secrets.DOCKER_PASSWORD }}
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
+    with:
+      hosting_provider: ${{ vars.HOSTING_PROVIDER1 }}
+      app_name: flask-react-app
+      app_env: preview
+      branch: ${{ github.event.pull_request.head.ref }}
+      docker_registry: ${{ vars.DOCKER_REGISTRY }}
+      docker_username: ${{ vars.DOCKER_USERNAME }}
+      aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
+      aws_region: ${{ vars.AWS_REGION }}
+      do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
+    secrets:
+      docker_password: ${{ secrets.DOCKER_PASSWORD }}
+      aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
