--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "clsx": "^2.1.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
-    "cpx": "^1.5.0",
+    "cpx": "^1.2.1",
     "eslint-config-prettier": "^9.1.0",
     "formik": "^2.4.5",
     "google-libphonenumber": "^3.2.38",
@@ -64,7 +64,8 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "@types/config": "0.0.41",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/lodash": "^4.14.186",
@@ -72,7 +73,6 @@
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
-    "babel-preset-es2015": "^6.24.1",
     "concurrently": "^7.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
@@ -101,7 +101,7 @@
     "typescript": "^4.4.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
+    "webpack-dev-server": "^5.2.2",
     "webpack-merge": "^5.8.0"
   },
   "overrides": {
