--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "webpack-merge": "^5.8.0"
   },
   "overrides": {
+    "braces": "3.0.3",
     "minimist": "^1.2.8",
     "nconf": "0.11.4"
   }
